test/tests/bad/cast-poly.carth
;; NoClassInstance

(define: (foo a)
    (forall (a b) (Fun a b))
  (cast a))
